--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,46 @@
+body {
+    background-color: beige;
+}
 
 h1 {
     display: flex;
     justify-content: center;
 }
-#mensagens {
-    border: 1px solid black;
+
+.IMCalc {
+    background-color: gray;
+    width: 200px;
+    height: 300px;
     display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 100px auto;
+    border: 2px solid black;
+    color: black;
+    font-weight: bold;
+}
+
+form > input {
+    margin: 5px auto;
+}
+
+.Btn {
+    margin: 10px auto;
+}
+
+#mensagens {
+    display: flex;
+    width: 150px;
+    height: 25px;
+    margin: 10px auto;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
 }
